index: mention chatGPT

--- a/pages/index.yaml
+++ b/pages/index.yaml
@@ -532,8 +532,8 @@ body:       |
             properly</b>.  However, you may <b>not</b> look at another
             student's solution, and you may not copy any significant portions
             of other's solutions. Furthermore, you may not utilize <b>AI</b>
-            powered tools such as <b>Co-Pilot</b> or <b>Tabnine</b> for any of
-            your programming assignments.</p>
+            powered tools such as <b>Co-Pilot</b>, <b>Tabnine</b>, or
+            <b>ChatGPT</b> for any of your programming assignments.</p>
 
             <p>The following table summarizes how you may work with other
             students and use print/online sources:</p>
