--- a/.github/workflows/build-site.yaml
+++ b/.github/workflows/build-site.yaml
@@ -16,8 +16,11 @@ jobs:
 
     - name: Install deps
       run: sudo apt-get -y update && sudo apt-get -y install python3-tornado python3-yaml python3-markdown python3-dateutil
-    
-    - name: Checkout gh-pages
+
+    - name: Build site
+      run: make clean && make build
+
+    - name: Deploy back to gh
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
@@ -25,14 +28,6 @@ jobs:
         git config --local user.name "GitHub Actions"
         git config --local user.email "<>"
         git checkout gh-pages
-
-    - name: Build site
-      run: make clean && make build
-
-    - name: Deploy back to gh-pages
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |
         git add docs/
         git commit -m 'GitHub Actions: build site' || echo 'nothing to commit'
         git push origin gh-pages || echo 'nothing to push'
