--- a/pages/reading01.yaml
+++ b/pages/reading01.yaml
@@ -1,6 +1,9 @@
 title:      "Reading 01: Using the Shell"
 icon:       fa-book
-navigation: []
+navigation:
+  - name: "Home"
+    link: "index.html"
+    icon: "fa-linux"
 internal:
 external:
 body:       |
