--- a/pages/reading00.yaml
+++ b/pages/reading00.yaml
@@ -1,6 +1,9 @@
 title:      "Reading 00: Slack, GitHub, Student Machines"
 icon:       fa-book
-navigation: []
+navigation:
+  - name: "Home"
+    link: "index.html"
+    icon: "fa-linux"
 internal:
 external:
 body:       |
