Reading 01: update TA assignment

--- a/static/yaml/reading01.yaml
+++ b/static/yaml/reading01.yaml
@@ -104,6 +104,8 @@
   - mcarbona1
 - - egonza26
   - annaklempay
+- - egorzkie
+  - annaklempay
 - - ejensen7
   - cvankir2
 - - elink
@@ -149,6 +151,8 @@
 - - jporrase
   - annaklempay
 - - jrocha3
+  - cvankir2
+- - jschaffl
   - cvankir2
 - - jtran4
   - joshhchun
