--- a/static/yaml/schedule.yaml
+++ b/static/yaml/schedule.yaml
@@ -108,6 +108,7 @@
         assignment:     Reading 04
         items:
           - name:       Checklist 01
+            link:       checklist01.html
 
       - date:           Wed 02/15
         items:
