schedule: add Panopto video (2023-02-03)

--- a/static/yaml/schedule.yaml
+++ b/static/yaml/schedule.yaml
@@ -78,6 +78,8 @@
         items:
           - name:       Slides 08
             link:       https://docs.google.com/presentation/d/1HqSkyy42hIFiWVGl5m7Dspt5THpS-u5RYb8DcAQlf20/edit?usp=sharing
+          - name:       Panopto
+            link:       https://notredame.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=7139a1ab-b8c0-4b9a-b737-af9e01374bc4
 
       - date:           Sat 02/04
         topics:         Meeting the Oracle
