fix home button on Homework 02
oops

--- a/pages/homework02.yaml
+++ b/pages/homework02.yaml
@@ -1,6 +1,9 @@
 title:      "Homework 02: Meet the Oracle"
 icon:       fa-code
-navigation: []
+navigation:
+  - name: "Home"
+    link: "index.html"
+    icon: "fa-linux"
 internal:
 external:
 body:       |
