--- a/pages/homework03.yaml
+++ b/pages/homework03.yaml
@@ -1,6 +1,9 @@
 title:      "Homework 03: Weathering with Zipcodes"
 icon:       fa-code
-navigation: []
+navigation:
+  - name: "Home"
+    link: "index.html"
+    icon: "fa-linux" 
 internal:
 external:
 body:       |
