schedule: add Panopto video (2023-02-08)

--- a/static/yaml/schedule.yaml
+++ b/static/yaml/schedule.yaml
@@ -101,6 +101,8 @@
         items:
           - name:       Slides 08
             link:       https://docs.google.com/presentation/d/1HqSkyy42hIFiWVGl5m7Dspt5THpS-u5RYb8DcAQlf20/edit?usp=sharing
+          - name:       Panopto
+            link:       https://notredame.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=05edb4f1-fa5c-40b1-b188-afa301391c5a
 
       - date:           Fri 02/10
         topics:         Filters
