schedule: add Panopto video (2023-02-10)

--- a/static/yaml/schedule.yaml
+++ b/static/yaml/schedule.yaml
@@ -109,6 +109,8 @@
         items:
           - name:       Slides 08
             link:       https://docs.google.com/presentation/d/1HqSkyy42hIFiWVGl5m7Dspt5THpS-u5RYb8DcAQlf20/edit?usp=sharing
+          - name:       Panopto
+            link:       https://notredame.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=c99a52c3-d9c4-4ec9-ba88-afa50136de74
 
       - date:           Sat 02/11
         topics:         Weathering with Zipcodes
