schedule: add Panopto video (2023-02-13)

--- a/static/yaml/schedule.yaml
+++ b/static/yaml/schedule.yaml
@@ -123,6 +123,8 @@
         items:
           - name:       Slides R1
             link:       https://docs.google.com/presentation/d/1xlL66goXh_gDWmTlJnsA6CHeT5KpYRRg74U1PwUrip8/edit?usp=sharing
+          - name:       Panopto
+            link:       https://notredame.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=aa163f4f-4dd0-4cad-b8cd-afa80136e584
           - name:       Checklist 01
             link:       checklist01.html
 
