--- a/pages/homework04.yaml
+++ b/pages/homework04.yaml
@@ -1,6 +1,9 @@
 title:      "Homework 04: RPN, Unique"
 icon:       fa-code
-navigation: []
+navigation:
+- name: "Home"
+  link: "index.html"
+  icon: "fa-linux"
 internal:
 external:
 body:       |
