schedule: add Panopto video (2023-02-17)

--- a/static/yaml/schedule.yaml
+++ b/static/yaml/schedule.yaml
@@ -137,6 +137,8 @@
         items:
           - name:       Slides 09
             link:       https://docs.google.com/presentation/d/19cnLbqorULsXbnv4Nc-hRQoE4OHe3kKURadqrkLwkwg/edit?usp=sharing
+          - name:       Panopto
+            link:       https://notredame.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=5702b903-a133-4a35-84fa-afac013b43e3
 
 - name:     "Unit 02: Python"
 
