--- a/pages/homework06.yaml
+++ b/pages/homework06.yaml
@@ -1,6 +1,9 @@
 title:      "Homework 06: Hulk Smash"
 icon:       fa-code
-navigation: []
+navigation:
+  - name: "Home"
+    link: "index.html"
+    icon: "fa-linux"
 internal:
 external:
 body:       |
