schedule: add Panopto video (2023-03-10)

--- a/static/yaml/schedule.yaml
+++ b/static/yaml/schedule.yaml
@@ -228,6 +228,8 @@
         items:
           - name:       Slides 13
             link:       https://docs.google.com/presentation/d/1X68OaBkQ2jk1zp2dLWQtvfe0_pPoJCpwtWn0pwJ38xA/edit?usp=sharing
+          - name:       Panopto
+            link:       https://notredame.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=de4488a7-addf-4d2e-a923-afc101375082
 
       - date:           Sat 03/11
         topics:         Hulk Smash
