--- a/.github/workflows/build-site.yaml
+++ b/.github/workflows/build-site.yaml
@@ -21,6 +21,7 @@ jobs:
       run: make clean && make build
 
     - name: Deploy back to gh
+      if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
@@ -28,6 +29,8 @@ jobs:
         git config --local user.name "GitHub Actions"
         git config --local user.email "<>"
         git checkout gh-pages
-        git add docs/
+        git pull --rebase origin master
+        make clean && make build
+        git add -f docs/
         git commit -m 'GitHub Actions: build site' || echo 'nothing to commit'
-        git push origin gh-pages || echo 'nothing to push'
+        git push -f origin gh-pages || echo 'nothing to push'
