schedule: add Panopto video (2023-03-20)

--- a/static/yaml/schedule.yaml
+++ b/static/yaml/schedule.yaml
@@ -244,6 +244,8 @@
         items:
           - name:       Slides R2
             link:       https://docs.google.com/presentation/d/1LmelRPhWrLK3d8Mgp1BS_q1oouo8xJffoJkBW_JSE6U/edit?usp=sharing
+          - name:       Panopto
+            link:       https://notredame.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=1bb6b928-78bc-47d3-bd59-afcb012ac931
           - name:       Checklist 02
             link:       checklist02.html
 
