--- a/static/yaml/schedule.yaml
+++ b/static/yaml/schedule.yaml
@@ -258,6 +258,8 @@
         items:
           - name:       Slides 14
             link:       https://docs.google.com/presentation/d/1ZZ-E2gUZdQo0CR1ZSgD8_iuTXUdKvK0SuNCtY8l5fQc/edit?usp=sharing
+          - name:       Panopto
+            link:       https://notredame.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=26a937b1-432a-44ec-94d9-afcf01298af5
 
 - name:     "Unit 03: C"
 
