--- a/static/yaml/schedule.yaml
+++ b/static/yaml/schedule.yaml
@@ -302,6 +302,8 @@
         items:
           - name:       Slides 18
             link:       https://docs.google.com/presentation/d/1mxCSSU_PuxPS7joWwZdGBjpCIk6qHpg7xkR5QZgD7EA/edit?usp=sharing
+          - name:       Panopto
+            link:       https://notredame.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=099defdb-cb06-4f74-8b70-afd901276c7c
 
       - date:           Wed 04/05
         topics:         Linked Data Structures
