schedule: add Panopto video (2023-04-05)

--- a/static/yaml/schedule.yaml
+++ b/static/yaml/schedule.yaml
@@ -310,6 +310,8 @@
         items:
           - name:       Slides 19
             link:       https://docs.google.com/presentation/d/1R_gll7KGT7WN9UNZbcR-JOlzT56zt_A1zznQGCuneh8/edit?usp=sharing
+          - name:       Panopto
+            link:       https://notredame.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=bae4a0f0-bd97-401e-bd86-afdb012a0109
 
       - date:           Fri 04/07
         topics:         Easter
