Homework 09: show TA Guru

--- a/pages/homework09.yaml
+++ b/pages/homework09.yaml
@@ -890,10 +890,10 @@ body:       |
   <div class="alert alert-info" markdown="1">
   #### <i class="fa fa-check"></i> Verification
 
-  To get credit for this Guru Point, you must show either the instructor or TA
-  a demonstration of your `TROLL` in action (or attach a video / screenshot to
-  your **Pull Request**).  You have up until **Friday, April, 29** to verify
-  your guru point.
+  To get credit for this Guru Point, you must show either a TA a demonstration
+  of your `TROLL` in action (or attach a video / screenshot to your **Pull
+  Request**).  You have up until **Friday, April, 29** to verify your guru
+  point.
 
   </div>
 
@@ -1082,10 +1082,10 @@ body:       |
   <div class="alert alert-info" markdown="1">
   #### <i class="fa fa-check"></i> Verification
 
-  To get credit for this Guru Point, you must show either the instructor or TA
-  a demonstration of using `thor` to hammer `loki.py` running on your [VPS] (or
-  attach a video / screenshot to your **Pull Request**).  You have up until
-  **Friday, April 29** to verify your guru point.
+  To get credit for this Guru Point, you must show either a TA a demonstration
+  of using `thor` to hammer `loki.py` running on your [VPS] (or attach a video
+  / screenshot to your **Pull Request**).  You have up until **Friday, April
+  29** to verify your guru point.
 
   </div>
 
