--- a/static/yaml/schedule.yaml
+++ b/static/yaml/schedule.yaml
@@ -350,6 +350,8 @@
         items:
           - name:       Slides 21
             link:       https://docs.google.com/presentation/d/1KnhAvE-1Ng3AeCOrI_xG2BlRVT_KouxBkmrslBCfkmM/edit?usp=sharing
+          - name:       Panopto
+            link:       https://notredame.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=01a2d89a-83e8-4eaa-9de6-afe7012a8628
 
       - date:           Wed 04/19
         topics:         HTTP Client
