--- a/pages/homework09.yaml
+++ b/pages/homework09.yaml
@@ -867,12 +867,17 @@ body:       |
   <div class="alert alert-success" markdown="1">
   #### <i class="fa fa-calendar"></i> Self-Service Extension
 
-  Remember that you can always **forgo** these Guru Points for **two extra
-  days** to do the homework.  That is, if you need an extension, you can simply
-  skip the Guru Points and you will automatically have until Monday to complete
-  the assignment for full credit.
+  <strike>Remember that you can always **forgo** these Guru Points for **two
+  extra days** to do the homework.  That is, if you need an extension, you can
+  simply skip the Guru Points and you will automatically have until Monday to
+  complete the assignment for full credit.</strike>
 
-  Just leave a note on your **Pull Request** of your intensions.
+  <strike>Just leave a note on your **Pull Request** of your
+  intensions.</strike>
+
+  **Note**: For this week, we will **waive** forgoing the Guru Points in order
+    to get **two extra days** to do the homework. This means, that you can take
+    the self-service extension and still do all of the Guru Points.
 
   </div>
 
