schedule: add Panopto video (2023-04-21)

--- a/static/yaml/schedule.yaml
+++ b/static/yaml/schedule.yaml
@@ -366,6 +366,8 @@
         items:
           - name:       Slides 21
             link:       https://docs.google.com/presentation/d/1KnhAvE-1Ng3AeCOrI_xG2BlRVT_KouxBkmrslBCfkmM/edit?usp=sharing
+          - name:       Panopto
+            link:       https://notredame.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=576aeae5-7e65-405b-8909-afeb012853fb
 
 - name:     "Processes"
   days:
