--- a/static/yaml/schedule.yaml
+++ b/static/yaml/schedule.yaml
@@ -377,6 +377,8 @@
         items:
           - name:       Slides 22
             link:       https://docs.google.com/presentation/d/1glXaM_BZPAdQECBgi4N04W5SXYfCiWCW7hCniocH5Eo/edit?usp=sharing
+          - name:       Panopto
+            link:       https://notredame.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=0f676325-f50c-4c68-8075-afee012c8c1e
 
       - date:           Wed 04/26
         topics:         Signals
