--- a/static/yaml/schedule.yaml
+++ b/static/yaml/schedule.yaml
@@ -385,6 +385,8 @@
         items:
           - name:       Slides 22
             link:       https://docs.google.com/presentation/d/1glXaM_BZPAdQECBgi4N04W5SXYfCiWCW7hCniocH5Eo/edit?usp=sharing
+          - name:       Panopto
+            link:       https://notredame.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=105268be-20e9-406f-9b30-aff0012c3cdc
 
       - date:           Fri 04/28
         topics:         VPS / Concurrent HTTP Server
