Homework 09: fix GP dates

--- a/pages/homework09.yaml
+++ b/pages/homework09.yaml
@@ -897,7 +897,7 @@ body:       |
 
   To get credit for this Guru Point, you must show either a TA a demonstration
   of your `TROLL` in action (or attach a video / screenshot to your **Pull
-  Request**).  You have up until **Friday, April, 29** to verify your guru
+  Request**).  You have up until **Friday, May, 5** to verify your guru
   point.
 
   </div>
@@ -1065,7 +1065,7 @@ body:       |
   To get credit for this Guru Point, you must have your [IRC] bot join the
   `#bots` channel on the [chat.ndlug.org] server and demonstrate its
   functionality yourself (by logging into the server with your own account) and
-  showing the instructor.  You have up until **Friday, April 29** to verify
+  showing the instructor.  You have up until **Friday, May 5** to verify
   your guru point.
 
   </div>
@@ -1090,8 +1090,8 @@ body:       |
 
   To get credit for this Guru Point, you must show either a TA a demonstration
   of using `thor` to hammer `loki.py` running on your [VPS] (or attach a video
-  / screenshot to your **Pull Request**).  You have up until **Friday, April
-  29** to verify your guru point.
+  / screenshot to your **Pull Request**).  You have up until **Friday, May 5**
+  to verify your guru point.
 
   </div>
 
