schedule: add Panopto video (2023-04-28)

--- a/static/yaml/schedule.yaml
+++ b/static/yaml/schedule.yaml
@@ -393,6 +393,8 @@
         items:
           - name:       Slides 23
             link:       https://docs.google.com/presentation/d/1UzCXr9CAlufrV4oR07ujQJ6JUc56OuM3k6_1-ifuKj0/edit?usp=sharing
+          - name:       Panopo
+            link:       https://notredame.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=db4f05f4-23c4-4c56-bb5f-aff201267ba8
 
       - date:           Sat 04/29
         topics:         "Thor's Hammer"
